--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "/home/senear/anaconda3/bin/python"
+    "python.pythonPath": "/home/senear/anaconda3/bin/python",
+    "cSpell.words": [
+        "bson",
+        "jsonify",
+        "objectid",
+        "pymongo"
+    ]
 }
